feat: improve api
